--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular-ui-bootstrap-datetimepicker": "0.14.0",
     "angular-bootstrap": "0.14.3",
     "jquery": "2.1.4",
-    "lodash": "3.10.1"
+    "lodash": "3.10.1",
+    "angular-route": "1.4.8"
   }
 }
