--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "http-proxy": "1.12.0",
+    "less-middleware": "2.0.1",
+    "lodash": "3.10.1",
+    "mongoose": "4.3.3",
     "morgan": "~1.6.1",
+    "q": "1.4.1",
     "serve-favicon": "~2.3.0"
   }
 }
