--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-bootstrap": "0.14.3",
     "jquery": "2.1.4",
     "lodash": "3.10.1",
-    "angular-route": "1.4.8"
+    "angular-route": "1.4.8",
+    "angular-chosen-localytics": "~1.0.7"
   }
 }
