--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "1.12.1",
     "http-proxy": "1.12.0",
     "less-middleware": "2.0.1",
     "lodash": "3.10.1",
     "mongoose": "4.3.3",
     "morgan": "~1.6.1",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
     "q": "1.4.1",
     "serve-favicon": "~2.3.0"
   }
