--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "http-proxy": "1.12.0",
     "less-middleware": "2.0.1",
     "lodash": "3.10.1",
+    "moment": "2.11.0",
     "mongoose": "4.3.3",
     "morgan": "~1.6.1",
     "passport": "0.3.2",
