--- a/bower.json
+++ b/bower.json
@@ -13,11 +13,12 @@
   "dependencies": {
     "angular": "1.4.8",
     "bootstrap": "3.3.6",
-    "angular-resource": "1.4.8",    
+    "angular-resource": "1.4.8",
     "angular-bootstrap": "0.14.3",
     "jquery": "2.1.4",
     "lodash": "3.10.1",
     "angular-route": "1.4.8",
-    "angular-chosen-localytics": "~1.0.7"
+    "angular-chosen-localytics": "~1.0.7",
+    "angular-websocket": "1.0.14"
   }
 }
