--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "passport": "0.3.2",
     "passport-local": "1.0.0",
     "q": "1.4.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "websocket": "1.0.22"
   }
 }
